fix: Tweak css to fix map layout issue cause by side navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,37 +40,37 @@ background-position: center center;
 }
 
 .overlay--anchor {
-    /*height: 16vh;*/
     position: relative;
 }
 
 .overlay {
-    /*position: absolute;
-    top: -24px;
-    left: -1px;
-    display: block;
-    background-color: rgba(52, 52, 52, 0.4);
-    border-radius: 15px;*/
-
-    width: 100vw;
+    position: absolute;
+    bottom: 20px;
+    width: fit-content;
     height: fit-content;
     margin: 0 auto;
+    padding: 12px;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    display: inline-block;
     border-radius: 11px;
     background-color: rgba(52, 52, 52, 0.6);
-    display: inline-block;
+    color: #f1f2eb;
+    text-align: center
 }
 
 
 /* ********************************************************* SECTION TWO <main> - Map View - Leaftlet JS */
 
 .map-container{
-    height: 99.5vh;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 
-div.style {
+/*div.style {
     max-height: 100vh;
-}
+}*/
 
 #sideNav-locations-container{
     max-height: 99.5vh !important;
@@ -83,14 +83,15 @@ div.style {
     padding-bottom: 50px;
 }
 
-/*#map-container{
-    background-color: #005332;
-}*/
-
 #map {
     height: 99.5vh;
     width: 100%;
     /*margin-top: 1vh;*/
+}
+
+#map-div{
+    height: 96.5vh;
+    width: 100vw;
 }
 
 /* Add margin to Leaflet zoom control container */
@@ -106,7 +107,19 @@ div.style {
 #menu{
     z-index: 1100;
     bottom: 10px;
-    left: 10px;
+    left: 190px;
+    display: inline-block;
+}
+
+.side-nav-menu{
+    width: 35px;
+    position: fixed;
+    z-index: 1100;
+    bottom: 20px;
+    left: 20px;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
 }
 
 .h4{
@@ -158,7 +171,7 @@ h5{
     text-shadow: 0 0 #000000;
 }
 
-/* Override Bootstrap ????? */
+/* Override Bootstrap or Leaflet! ????? */
 .map-container .row {
    display: flex !important;
    flex-wrap: inherit !important;
@@ -215,18 +228,27 @@ h5{
         z-index: 1100;
         bottom: 0;
         left: 0;
-        /*background-color: rgba(183, 153, 13, 0.9);*/
         background-color: #f7fa3885;
-        /*overflow-x: hidden;*/
         overflow-y: scroll;
         padding-top: 60px;
         padding-bottom: 70px;
         transition: 0.5s;
+
+        /*overflow-x: hidden;
+        background-color: rgba(183, 153, 13, 0.9);*/
     }
 }
 
-/*@media (min-width: 992px){
+@media (min-width: 992px){
     #menu {
         display: none;
     }
-}*/
+    .leaflet-container .leaflet-control-attribution, .leaflet-container .leaflet-control-scale {
+        margin-bottom: 20px;
+        margin-left: 200px;
+    }
+    .leaflet-control-attribution a {
+        text-decoration: none;
+        margin-right: 15vw;
+    }
+}
